src/test/ui/underscore-lifetime/in-fn-return-illegal.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/in-fn-return-illegal.rs:5:30
   |
LL | fn foo(x: &u32, y: &u32) -> &'_ u32 { loop { } }
   |                              ^^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `x` or `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
